--- a/android/FirstApp/app/build.gradle
+++ b/android/FirstApp/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 
     // Jetpack
     implementation 'androidx.core:core-ktx:1.3.0'
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
