--- a/android/SecondApp/app/build.gradle
+++ b/android/SecondApp/app/build.gradle
@@ -41,15 +41,16 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:4.7.2'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
     // Java   - annotationProcessor
     // Kotlin - kapt
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'  // !!
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     // annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
 
     // Jetpack
     implementation 'androidx.core:core-ktx:1.3.0'
