--- a/android/SecondApp/build.gradle
+++ b/android/SecondApp/build.gradle
@@ -1,6 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
+    ext.okhttp_version = "4.7.2"
+    ext.retrofit_version = "2.5.0"
+    ext.glide_version = "4.11.0"
+
     repositories {
         google()
         jcenter()
